Fix bad sizeof().

Submitted by:	David Binderman <dcb314@hotmail.com>
PR:	209636


git-svn-id: svn+ssh://svn.freebsd.org/base/head@300200 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f